# advanced_rag

./: .env.example  .gitignore  README.md  app.py  config.py  docker-compose.yml  langchain_parser.py  main.py  monitor.py  pdf_parser.py  pyproject.toml  requirements.txt  result_viewer.py  start_server.sh  view_parse_process.sh
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/conf/: bailian_mcp_config.py
app/core/: load_prompt.py  logger.py
app/lm/: embedding_utils.py  lm_utils.py  vlm_utils.py  web_search_utils.py
app/utils/: escape_milvus_string_utils.py  path_util.py  (+2 more)
backend/: main.py  pyproject.toml
backend/app/conf/: lm_config.py  milvus_config.py  mineru_config.py
backend/app/import_process/agent/nodes/: node_pdf_to_md.py
backend/app/import_process/api/: file_import_service.py
backend/app/lm/: rerank_utils.py
backend/app/query_process/agent/: state.py
backend/app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_search_embedding.py  node_search_embedding_hyde.py
backend/app/utils/: sse_utils.py
backend/prompts/: answer_out.prompt  hyde_generate.prompt
backend/test/: 04_e2e_integration_test.py
examples/: langchain_parse_example.py  parse_example.py
frontend/: chat.html  import.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
prompts/: item_name_confirm.prompt  item_name_recognition.prompt
specs/: design-spec.md
templates/: index.html  result.html
test/: 02_import_graph_flow.py  03_query_graph_flow.py  04_e2e_integration_test.py
(+39 files in other folders)
