[project]
name = "advanced-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "grandalf",
    "dashscope",
    "pymilvus",
    "minio",
    "pymongo",
    "magic-pdf",
    "python-dotenv",
    "loguru",
    "numpy",
    "pandas",
    "regex",
    "requests",
]
