[project]
name = "advanced-rag"
version = "1.0.0"
description = "Advanced RAG System — LangGraph + Milvus + Aliyun Bailei"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "grandalf",
    "dashscope",
    "pymilvus",
    "minio",
    "pymongo",
    "magic-pdf",
    "python-dotenv",
    "loguru",
    "numpy",
    "pandas",
    "regex",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
